--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,3 +34,42 @@
 #navbarNavAltMarkup {
   justify-content: flex-end;
 }
+
+#about-us {
+ 
+  width: 70%;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+}
+
+#first-info {
+  width: 70%;
+  max-width: 500px;
+  position: relative;
+  right: 100px;
+}
+
+#second-info {
+  margin-left: 200px;
+
+}
+
+#work-time {
+      margin-top: 50px;
+}
+
+.info {
+  display: flex;
+  padding: 30px;
+}
+
+.hr {
+  width: 30%;
+  border-top: 1px solid #FADADD;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
