--- a/src/css/index.css
+++ b/src/css/index.css
@@ -73,3 +73,35 @@
   width: 100%;
   height: 100%;
 }
+
+
+
+.contact-info-wrapper {
+  display: flex;
+  justify-content: space-around;
+  background: #262626;
+  color: #777;
+  padding: 50px;
+}
+
+.about-footer {
+  width: 200px;
+}
+
+.h4 {
+  color: white;
+}
+
+#toTop {
+padding:5px;
+position:fixed;
+bottom:10px;
+right:10px;
+cursor:pointer;
+display:none;
+
+}
+
+.social {
+  margin-bottom: 20px;
+}
