move js and css file to the same directory as index.html , add icon and name to the browser tab

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
 #main-background {
-  background: url('../img/annie-spratt-K4vGUuX1jtQ-unsplash.jpg') center center no-repeat;
+  background: url('./img/annie-spratt-K4vGUuX1jtQ-unsplash.jpg') center center no-repeat;
   height: 0px;
   max-height: 100vh;
   width: 100%;
