--- a/index.css
+++ b/index.css
@@ -1,14 +1,13 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box;/* для того, щоб коректно задати ширину і довжину*/
 }
 
 #main-background {
   background: url('./img/annie-spratt-K4vGUuX1jtQ-unsplash.jpg') center center no-repeat;
-  height: 0px;
-  max-height: 100vh;
+  max-height: 100vh; /* максимальна висота- повний заповнений екран*/
   width: 100%;
   color: white;
-  display: flex;
+  display: flex; 
   align-items: center;
 }
 
@@ -26,8 +25,8 @@
 
   position: fixed;
   width: 100%;
-  opacity: 0;
-  z-index: 9999;
+  opacity: 0; /* спочатку навбар прозорий*/
+  z-index: 9999; 
   box-shadow: 0px 10px 32px -5px rgba(0,0,0,0.46);
 }
 
@@ -38,14 +37,14 @@
 #about-us {
  
   width: 70%;
-  margin: 0 auto;
-  padding: 60px 0;
-  display: flex;
+  margin: 0 auto;/* ставить по центру*/
+  padding: 60px 0;/* стискає елементи у контейнері*/
+  display: flex;/* виставляє елементи в ряд*/
 }
 
 #first-info {
   width: 70%;
-  max-width: 500px;
+  max-width: 500px;/* максимальна ширина- 500 пікселів*/
   position: relative;
   right: 100px;
 }
@@ -60,28 +59,22 @@
 }
 
 .info {
-  display: flex;
-  padding: 30px;
+  display: flex;/* виставляє елементи в ряд*/
+  padding: 30px;/* стискає елементи у контейнері*/
 }
-
+/* hr робить лінії*/
 .hr {
   width: 30%;
-  border-top: 1px solid #FADADD;
+  border-top: 1px solid #FADADD; /* бере верхню лінію:)*/
 }
-
-.image {
-  width: 100%;
-  height: 100%;
-}
-
 
 
 .contact-info-wrapper {
-  display: flex;
-  justify-content: space-around;
+  display: flex; /* виставляє елементи в ряд*/
+  justify-content: space-around;/* виставляє проміжки між елементами*/
   background: #262626;
   color: #777;
-  padding: 50px;
+  padding: 50px;/* стискає елементи у контейнері*/
 }
 
 .about-footer {
@@ -94,11 +87,12 @@
 
 #toTop {
 padding:5px;
-position:fixed;
+position: fixed;
 bottom:10px;
 right:10px;
-cursor:pointer;
-display:none;
+z-index: 1000;
+cursor:pointer;/* стиль кнопки, яка збоку рухається*/
+display:none;/*на початку не відобраєам*/
 
 }
 
